--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -29,11 +29,15 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/due_date_hint"
+        android:clickable="true"
+        android:inputType="none"
+        android:focusable="false"
+        android:longClickable="false"
         app:layout_constraintStart_toStartOf="@+id/et_title"
         app:layout_constraintTop_toBottomOf="@+id/et_title" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/s_priority"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -54,7 +58,7 @@
         android:hint="@string/description_hint"
         android:inputType="textMultiLine"
         android:minLines="8"
-        app:layout_constraintEnd_toEndOf="@+id/spinner"
+        app:layout_constraintEnd_toEndOf="@+id/s_priority"
         app:layout_constraintStart_toStartOf="@+id/et_dueDate"
         app:layout_constraintTop_toBottomOf="@+id/et_dueDate" />
 
@@ -67,6 +71,7 @@
         android:textColor="@color/text_white"
         app:layout_constraintEnd_toEndOf="@+id/et_description"
         app:layout_constraintStart_toStartOf="@+id/et_description"
-        app:layout_constraintTop_toBottomOf="@+id/et_description" />
+        app:layout_constraintTop_toBottomOf="@+id/et_description"
+        android:onClick="onSaveItem"/>
 
 </android.support.constraint.ConstraintLayout>
